plugins/editorconfig/testData/org/editorconfig/language/highlighting/error/danglingKey/.editorconfig
[foo]
<error>hello.world</error>
